corrijo errores de checkstyle y findbugs